--- a/experimental/higepon/scheme/src/Makefile.in
+++ b/experimental/higepon/scheme/src/Makefile.in
@@ -55,10 +55,10 @@ am_scheme_OBJECTS = main.$(OBJEXT) Object.$(OBJEXT) Number.$(OBJEXT) \
 	Pair.$(OBJEXT) And.$(OBJEXT) Or.$(OBJEXT) Let.$(OBJEXT) \
 	LetAsterisk.$(OBJEXT) Application.$(OBJEXT) Parser.$(OBJEXT) \
 	Tokenizer.$(OBJEXT) Node.$(OBJEXT) Translator.$(OBJEXT) \
-	Plus.$(OBJEXT) Cons.$(OBJEXT) Car.$(OBJEXT) Cdr.$(OBJEXT) \
-	Display.$(OBJEXT) StringP.$(OBJEXT) NumberP.$(OBJEXT) \
-	NumberEqual.$(OBJEXT) StringToNumber.$(OBJEXT) \
-	scheme.$(OBJEXT) load.$(OBJEXT)
+	Plus.$(OBJEXT) Minus.$(OBJEXT) Cons.$(OBJEXT) Car.$(OBJEXT) \
+	Cdr.$(OBJEXT) Display.$(OBJEXT) StringP.$(OBJEXT) \
+	NumberP.$(OBJEXT) NumberEqual.$(OBJEXT) NumberGt.$(OBJEXT) \
+	StringToNumber.$(OBJEXT) scheme.$(OBJEXT) load.$(OBJEXT)
 scheme_OBJECTS = $(am_scheme_OBJECTS)
 scheme_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -147,6 +147,9 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+#scheme_INCLUDES=-I /usr/include -I /usr/include/stlport -I .
+#scheme_CXXFLAGS = -pg -I /usr/include/stlport
+#scheme_LDFLAGS = -pg -lstlport
 scheme_SOURCES = \
 main.cpp\
 Object.cpp\
@@ -200,6 +203,8 @@ Translator.h\
 PrimitiveProcedure.h\
 PrimitiveProcedures/Plus.cpp\
 PrimitiveProcedures/Plus.h\
+PrimitiveProcedures/Minus.cpp\
+PrimitiveProcedures/Minus.h\
 PrimitiveProcedures/Cons.cpp\
 PrimitiveProcedures/Cons.h\
 PrimitiveProcedures/Car.cpp\
@@ -214,6 +219,8 @@ PrimitiveProcedures/NumberP.cpp\
 PrimitiveProcedures/NumberP.h\
 PrimitiveProcedures/NumberEqual.cpp\
 PrimitiveProcedures/NumberEqual.h\
+PrimitiveProcedures/NumberGt.cpp\
+PrimitiveProcedures/NumberGt.h\
 PrimitiveProcedures/StringToNumber.cpp\
 PrimitiveProcedures/StringToNumber.h\
 scheme.h\
@@ -298,6 +305,12 @@ Plus.o: PrimitiveProcedures/Plus.cpp
 Plus.obj: PrimitiveProcedures/Plus.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Plus.obj `if test -f 'PrimitiveProcedures/Plus.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Plus.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Plus.cpp'; fi`
 
+Minus.o: PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Minus.o `test -f 'PrimitiveProcedures/Minus.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Minus.cpp
+
+Minus.obj: PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Minus.obj `if test -f 'PrimitiveProcedures/Minus.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Minus.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Minus.cpp'; fi`
+
 Cons.o: PrimitiveProcedures/Cons.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Cons.o `test -f 'PrimitiveProcedures/Cons.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Cons.cpp
 
@@ -339,6 +352,12 @@ NumberEqual.o: PrimitiveProcedures/NumberEqual.cpp
 
 NumberEqual.obj: PrimitiveProcedures/NumberEqual.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o NumberEqual.obj `if test -f 'PrimitiveProcedures/NumberEqual.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/NumberEqual.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/NumberEqual.cpp'; fi`
+
+NumberGt.o: PrimitiveProcedures/NumberGt.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o NumberGt.o `test -f 'PrimitiveProcedures/NumberGt.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/NumberGt.cpp
+
+NumberGt.obj: PrimitiveProcedures/NumberGt.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o NumberGt.obj `if test -f 'PrimitiveProcedures/NumberGt.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/NumberGt.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/NumberGt.cpp'; fi`
 
 StringToNumber.o: PrimitiveProcedures/StringToNumber.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StringToNumber.o `test -f 'PrimitiveProcedures/StringToNumber.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/StringToNumber.cpp
