--- a/experimental/file_server_on_linux/src/Makefile.am
+++ b/experimental/file_server_on_linux/src/Makefile.am
@@ -2,11 +2,12 @@
 # export GLIBCXX_FORCE_NEW=1
 
 bin_PROGRAMS = file_server
-file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I ../../../mona/tool/
+file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
 file_server_SOURCES = \
 FileSystem.h\
 IDEDriver.cpp\
 IDEDriver.h\
+IStorageDevice.h\
 Message.cpp\
 Message.h\
 VnodeCacher.cpp\
@@ -15,6 +16,7 @@ messages.cpp\
 SocketMessage.cpp\
 SocketMessage.h\
 cmemoryinfo.cpp\
+cmemoryinfo.h\
 ProcessUtil.cpp\
 ProcessUtil.h\
 main.cpp\
@@ -23,6 +25,18 @@ vnode.h\
 vnode.cpp\
 dtk5s.cpp\
 dtk5s.h\
+monapi/Array.h\
+monapi/Assert.h\
+monapi/CString.cpp\
+monapi/CString.h\
+monapi/cmemoryinfo.h\
+monapi/messages.h\
+servers/file.h\
+servers/keyboard.h\
+servers/mouse.h\
+servers/net.h\
+servers/process.h\
+servers/servers.h\
 VnodeManager.h\
 VnodeManager.cpp\
 FileServer.h\
@@ -34,8 +48,10 @@ FAT12/FAT12FileSystem.cpp\
 FAT12/FAT12FileSystem.h\
 FAT12/FDCDriver.cpp\
 FAT12/FDCDriver.h\
-FAT12/fat.cpp\
-FAT12/endian_util.cpp\
+FAT12/fat_write/fat.cpp\
+FAT12/fat_write/endian_util.cpp\
+FAT12/fat_write/endian_util.h\
+FAT12/fat_write/file.h\
+FAT12/fat_write/fat.h\
 Process/ProcessFileSystem.cpp\
 Process/ProcessFileSystem.h
-
