--- a/experimental/file_server_on_linux/src/Makefile.in
+++ b/experimental/file_server_on_linux/src/Makefile.in
@@ -164,7 +164,9 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
 file_server_SOURCES = \
+error.h\
 FileSystem.h\
+FileDate.h\
 IDEDriver.cpp\
 IDEDriver.h\
 IStorageDevice.h\
@@ -213,6 +215,7 @@ FAT12/fat_write/endian_util.cpp\
 FAT12/fat_write/endian_util.h\
 FAT12/fat_write/file.h\
 FAT12/fat_write/fat.h\
+FAT12/fat_write/IStorageDevice.h\
 Process/ProcessFileSystem.cpp\
 Process/ProcessFileSystem.h
 
