Added shutdown code.

--- a/experimental/mona_apm/core/kernel/Makefile
+++ b/experimental/mona_apm/core/kernel/Makefile
@@ -41,7 +41,8 @@ SOURCES      = cstart.cpp            \
                RTC.cpp               \
                Messenger.cpp         \
                MemoryAllocator.cpp   \
-               apm.cpp
+               apm.cpp               \
+               shutdown.cpp          
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
