--- a/experimental/mona_apm/tool/mkimg/MONITOR.CFG
+++ b/experimental/mona_apm/tool/mkimg/MONITOR.CFG
@@ -4,4 +4,6 @@ SERVER=/SERVERS/ELF.BN5
 SERVER=/SERVERS/PE.BN5
 SERVER=/SERVERS/KEYBDMNG.EX5
 SERVER=/SERVERS/MOUSE.EX5
+SERVER=/SERVERS/PM.EX5
 SERVER=/SERVERS/SHELL.EX5
+
