--- a/contrib/Sysutils/libPci/.cvsignore
+++ b/contrib/Sysutils/libPci/.cvsignore
@@ -1,7 +1,21 @@
+*.a
 *.o
 *.bin
 *.list
 *.map
 *.local
+*.BIN
+*.BN2
+*.BN5
+*.BM2
+*.BM5
+*.DLL
+*.DL2
+*.DL5
+*.ELF
+*.EL2
+*.EXE
+*.EX2
+*.EX5
 TAGS
 dependencies
