--- a/contrib/Net/NetServer/Mona/Makefile
+++ b/contrib/Net/NetServer/Mona/Makefile
@@ -51,7 +51,7 @@ ifneq ($(NASMSRCS),)
 	for asm in $(NASMSRCS); do echo `echo $$asm | sed "s/\.asm/.o/`": "$$asm >> dependencies; done
 endif
 
-ADDLINK += -lPci -lmonalibc
+ADDLINK += -lpci -lmonalibc
 
 CXXFLAGS += -DDEBUG
 
