--- a/mona/core/monalibc/Makefile
+++ b/mona/core/monalibc/Makefile
@@ -59,12 +59,12 @@ clean:
 
 install: $(TARGET)
 	mkdir -p $(LIBDIR)
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 ifneq ($(BUILD_TARGET),ELF)
-	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
-	$(INSTALL) -m 0644 $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -p -m 0644 $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
 endif
-	$(INSTALL) $(CRT_OBJECT) $(LIBDIR)
+	$(INSTALL) -p $(CRT_OBJECT) $(LIBDIR)
 
 -include dependencies
