--- a/mona/tool/fat_write/Makefile.in
+++ b/mona/tool/fat_write/Makefile.in
@@ -83,9 +83,7 @@ am__vpath_adj = case $$p in \
     *) f=$$p;; \
   esac;
 am__strip_dir = `echo $$p | sed -e 's|^.*/||'`;
-fat_write_dataDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(fat_write_data_DATA)
-fat_write_includeHEADERS_INSTALL = $(INSTALL_HEADER)
 HEADERS = $(fat_write_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
@@ -184,6 +182,8 @@ fat_write_datadir = @MONADIR@/share/fat_write
 fat_write_data_DATA = fat_template.img
 fat_write_includedir = @MONADIR@/include/fat_write
 fat_write_include_HEADERS = fat.cpp VirtualFloppy.h fat.h file.h types.h IStorageDevice.h endian_util.h endian_util.cpp config.h
+fat_write_dataDATA_INSTALL = ${INSTALL} -p -m 644
+fat_write_includeHEADERS_INSTALL = ${INSTALL} -p -m 644
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
