--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -4,22 +4,18 @@ export MONADIR=$(PWD)/../mona
 endif
 
 all:
-# basic libraries
-# stlport move to mona/tool/stlport
-#	cd Devel/stlport && make install
+### basic libraries
 	cd Graphics/libjpegls && touch dependencies && make && make install
-# servers
+### servers
 	cd X/gui && touch dependencies && make && make install
 	cd Sysutils/libPci && touch dependencies && make && make install
 	cd Net/NetServer && make && make install
-# libraries
-# tmpmonalibc merged in monalibc
-#	cd Devel/tmpmonalibc && touch dependencies && make && make install
+### libraries
 	cd Graphics/Mesa && touch dependencies && make && make install
 	cd Graphics/libgui && touch dependencies && make && make install
 	cd Graphics/libbaygui && touch dependencies && make && make install
 	cd Net/libnet && make && make install
-# non-gui applications
+### non-gui applications
 	cd Emulators/infones && touch dependencies && make && make install
 	cd Emulators/monamona && touch dependencies && make && make install
 	cd Graphics/jpegview && touch dependencies && make && make install
@@ -27,18 +23,18 @@ all:
 	cd Misc/helloworld && touch dependencies && make && make install
 	cd Multimedia/monapeg && touch dependencies && make && make install
 	cd Multimedia/monappt && touch dependencies && make && make install
-# MonaForms applications
+### MonaForms applications
 	cd Shells/mshell && touch dependencies && make && make install
 	cd X/monafile && touch dependencies && make && make install
 	cd Net/monadat && touch dependencies && make && make install
-# BayGUI applications
+### BayGUI applications
 	cd Shells/gshell && touch dependencies && make && make install
 	cd X/glaunch && touch dependencies && make && make install
 	cd Misc/gnote && touch dependencies && make && make install
 	cd Multimedia/xmonapeg && touch dependencies && make && make install
-# Network applications
+### Network applications
 	cd Net/libnet/sample/giko && make && make install
-# Append
+### Append
 	cd Benchmarks/gfire && make && make install
 	cd Benchmarks/gnoiz2bg && make && make install
 	cd Games/ghebtn && make && make install
@@ -49,14 +45,11 @@ all:
 	cd Graphics/bitmap && make && make install
 	cd Sysutils/gclock && make && make install
 	cd Sysutils/gtimer && make && make install
-# make disk images
+	cd Sysutils/startx && make && make install
+### make disk images
 	cd $(MONADIR)/tool/mkimg && make
 
 clean:
-# stlport move to mona/tool/stlport
-#	cd Devel/stlport && make clean
-# tmpmonalibc merged in monalibc
-#	cd Devel/tmpmonalibc && make clean
 	cd Emulators/infones && make clean
 	cd Emulators/monamona && make clean
 	cd Graphics/jpegview && make clean
@@ -89,3 +82,4 @@ clean:
 	cd Graphics/bitmap && make clean
 	cd Sysutils/gclock && make clean
 	cd Sysutils/gtimer && make clean
+	cd Sysutils/startx && make clean
