--- a/mona/tool/mkimg/Makefile
+++ b/mona/tool/mkimg/Makefile
@@ -11,10 +11,10 @@ clean:
 	rm -f $(MONADIR)/bin/mona.img
 
 iso:
-	cp mona.img $(MONADIR)/bin
-	cp AUTOEXEC.MSH $(MONADIR)/bin
-	cp MONITOR.CFG $(MONADIR)/bin
-	cp MONA.CFG $(MONADIR)/bin
+	$(INSTALL) -p mona.img $(MONADIR)/bin
+	$(INSTALL) -p AUTOEXEC.MSH $(MONADIR)/bin
+	$(INSTALL) -p MONITOR.CFG $(MONADIR)/bin
+	$(INSTALL) -p MONA.CFG $(MONADIR)/bin
 	cd $(MONADIR) && mkisofs -v -iso-level 1 -b mona.img -o mona.iso bin
 	mv $(MONADIR)/mona.iso .
 	rm -f $(MONADIR)/bin/mona.img
