--- a/contrib/Net/libnet/Makefile
+++ b/contrib/Net/libnet/Makefile
@@ -53,14 +53,14 @@ distclean: clean
 
 install: $(TARGET)
 	mkdir -p $(LIBDIR)
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 ifneq ($(BUILD_TARGET),ELF)
-	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
-	$(INSTALL) $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -p $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
 endif
-	$(INSTALL) net.h $(INCDIR)
-	$(INSTALL) TCPClient.h $(INCDIR)
+	$(INSTALL) -p net.h $(INCDIR)
+	$(INSTALL) -p TCPClient.h $(INCDIR)
 
 uninstall:
 	rm -f $(LIBDIR)/$(LIB_STATIC)
