--- a/contrib/Net/mones/nicdrv/Makefile
+++ b/contrib/Net/mones/nicdrv/Makefile
@@ -59,15 +59,15 @@ distclean: clean
 
 install: $(TARGET)
 	mkdir -p $(LIBDIR)
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 ifneq ($(BUILD_TARGET),ELF)
-	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
-	$(INSTALL) $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 endif
 	mkdir -p $(INCDIR)/nicdrv
-	$(INSTALL) -m 0644 *.h $(INCDIR)/nicdrv/
+	$(INSTALL) -p -m 0644 *.h $(INCDIR)/nicdrv/
 
 uninstall:
 	rm -f $(LIBDIR)/$(LIB_STATIC)
