--- a/contrib/Sysutils/libPci/Makefile
+++ b/contrib/Sysutils/libPci/Makefile
@@ -56,15 +56,15 @@ distclean: clean
 
 install: $(TARGET)
 	mkdir -p $(LIBDIR)
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 ifneq ($(BUILD_TARGET),ELF)
-	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
-	$(INSTALL) $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
-	$(INSTALL) -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
 endif
 	mkdir -p $(INCDIR)/pci
-	$(INSTALL) -m 0644 pci/*.h $(INCDIR)/pci/
+	$(INSTALL) -p -m 0644 pci/*.h $(INCDIR)/pci/
 
 uninstall:
 	rm -f $(LIBDIR)/$(LIB_STATIC)
