changed install directory

--- a/contrib/Multimedia/monappt/MONAPPT.INI
+++ b/contrib/Multimedia/monappt/MONAPPT.INI
@@ -1,13 +1,3 @@
-img0.jpg
-img1.jpg
-img2.jpg
-img3.jpg
-img4.jpg
-img5.jpg
-img6.jpg
-img7.jpg
-img8.jpg
-8min.mpg
-img9.jpg
-img10.jpg
-img11.jpg
+/APPS/MONAPPT.APP/img0.jpg
+/APPS/MONAPPT.APP/img1.jpg
+/APPS/8MIN.MPG
