--- a/contrib/Multimedia/monappt/Makefile
+++ b/contrib/Multimedia/monappt/Makefile
@@ -1,6 +1,6 @@
 TARGET  = MONAPPT
 SOURCES = monappt.cpp
-INSTDIR = $(BINDIR)/APPS/$(TARGET).APP
+INSTDIR = $(BINDIR)/APPS
 INSTFILES  = MONAPPT.INI
 #CLEANFILES = $(INSTFILES)
 
